--- a/LoopHintSearchView/app/src/main/res/layout/activity_main.xml
+++ b/LoopHintSearchView/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <com.bfu.loophintsearchview.LoopHintSearchView
         android:id="@+id/searchView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
