--- a/LoopHintSearchView/app/src/main/res/layout/activity_main.xml
+++ b/LoopHintSearchView/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginHorizontal="20dp"
     tools:context=".MainActivity">
 
-    <com.bfu.loophintsearchview.RxLoopHintSearchView
-        android:id="@+id/searchView"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Flow"
+        app:layout_constraintBottom_toTopOf="@id/flowSearchView"
+        app:layout_constraintStart_toStartOf="@id/flowSearchView" />
+
+    <com.bfu.loophintsearchview.FlowLoopHintSearchView
+        android:id="@+id/flowSearchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/rxSearchView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="RxJava"
+        app:layout_constraintBottom_toTopOf="@id/rxSearchView"
+        app:layout_constraintStart_toStartOf="@id/rxSearchView" />
+
+    <com.bfu.loophintsearchview.RxLoopHintSearchView
+        android:id="@+id/rxSearchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/flowSearchView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
