--- a/LoopHintSearchView/app/src/main/res/layout/activity_main.xml
+++ b/LoopHintSearchView/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginHorizontal="20dp"
-    tools:context=".MainActivity">
+    android:paddingHorizontal="20dp"
+    tools:context=".MainActivity"
+    tools:ignore="HardcodedText">
 
     <TextView
         android:layout_width="wrap_content"
