--- a/LoopHintSearchView/app/src/main/res/layout/fragment_user.xml
+++ b/LoopHintSearchView/app/src/main/res/layout/fragment_user.xml
@@ -13,7 +13,7 @@
     tools:context=".ui.UserFragment"
     tools:ignore="HardcodedText">
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/txt_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
