--- a/LoopHintSearchView/app/src/main/res/layout/fragment_user.xml
+++ b/LoopHintSearchView/app/src/main/res/layout/fragment_user.xml
@@ -13,6 +13,14 @@
     tools:context=".ui.UserFragment"
     tools:ignore="HardcodedText">
 
+    <TextView
+        android:id="@+id/txt_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/txt_msg"
         android:layout_width="wrap_content"
