--- a/LoopHintSearchView/app/src/main/res/layout/fragment_user.xml
+++ b/LoopHintSearchView/app/src/main/res/layout/fragment_user.xml
@@ -17,9 +17,10 @@
         android:id="@+id/txt_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_margin="5dp"
         android:textColor="@color/black"
         android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
