--- a/LoopHintSearchView/app/src/main/res/layout/layout_search_view.xml
+++ b/LoopHintSearchView/app/src/main/res/layout/layout_search_view.xml
@@ -16,7 +16,7 @@
         android:layout_gravity="center_vertical"
         android:layout_marginStart="12dp"
         android:gravity="center"
-        android:src="@android:drawable/ic_menu_search"
+        android:src="@drawable/ic_search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
