--- a/LoopHintSearchView/app/src/main/res/layout/layout_search_view.xml
+++ b/LoopHintSearchView/app/src/main/res/layout/layout_search_view.xml
@@ -11,8 +11,8 @@
     <!-- 搜索图标. -->
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/searchIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="12dp"
         android:gravity="center"
