--- a/LoopHintSearchView/app/src/main/res/layout/fragment_search.xml
+++ b/LoopHintSearchView/app/src/main/res/layout/fragment_search.xml
@@ -54,8 +54,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/rxDisposableSearchView"
         app:layout_constraintTop_toBottomOf="@id/flowSearchView" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="RxJava disposable"
+        app:layout_constraintBottom_toTopOf="@id/rxDisposableSearchView"
+        app:layout_constraintStart_toStartOf="@id/rxDisposableSearchView" />
+
+    <!-- RxJava2 -->
+    <com.bfu.loophintsearchview.widget.RxDisposableLoopHintSearchView
+        android:id="@+id/rxDisposableSearchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rxSearchView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
